--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
    "devDependencies": {
       "@babel/core": "^7.9.0",
       "@babel/preset-env": "^7.9.0",
+      "@commitlint/cli": "^8.3.5",
+      "@commitlint/config-conventional": "^8.3.4",
       "@types/mongoose": "^5.7.8",
       "@types/node": "^8.0.29",
       "@typescript-eslint/eslint-plugin": "^2.26.0",
       "@typescript-eslint/parser": "^2.26.0",
       "babel-jest": "^25.2.6",
+      "commitizen": "^4.0.3",
       "commitlint": "^8.3.5",
       "eslint": "^6.8.0",
       "eslint-config-standard": "^14.1.1",
@@ -18,6 +21,7 @@
       "eslint-plugin-node": "^11.1.0",
       "eslint-plugin-promise": "^4.2.1",
       "eslint-plugin-standard": "^4.0.1",
+      "husky": "^4.2.3",
       "jest-mock-extended": "^1.0.8",
       "mongodb-memory-server": "^6.5.1",
       "ts-jest": "^25.3.1",
@@ -46,6 +50,11 @@
       },
       "moduleNameMapper": {
          "@app/(.*)": "<rootDir>/src/app/$1"
+      }
+   },
+   "husky": {
+      "hooks": {
+         "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
       }
    }
 }
